--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
 
 
       <section id="main_content">
-        </section>
+        Branch created and code push is in process ....... 5% completed  
+      </section>
 
       <footer>
         <span class="ribbon-outer">
