--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 
       <section id="main_content">
-        Branch created and code push is in process ....... 5% completed  
+        <span class="c2c"></span>
       </section>
 
       <footer>
