--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 
       <section id="main_content">
-        <span class="c2c"></span>
+        <div class="c2c"></div>
       </section>
 
       <footer>
