--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=640">
 
-    <link rel="stylesheet" href="stylesheets/core.css" media="screen">
+<!--     <link rel="stylesheet" href="stylesheets/core.css" media="screen">
     <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)">
     <link rel="stylesheet" href="stylesheets/github-light.css">
 
@@ -16,7 +16,7 @@
       $(document).ready(function () {
         $('#main_content').headsmart()
       })
-    </script>
+    </script> -->
     <title>Shivdhwaj Pandey by shivdhwaj</title>
   </head>
 
