--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
 
   <body>
-    <a id="forkme_banner" href="https://github.com/shivdhwaj">View on GitHub</a>
+<!--     <a id="forkme_banner" href="https://github.com/shivdhwaj">View on GitHub</a> -->
     <div class="shell">
 
       <header>
@@ -48,7 +48,7 @@
         <div class="c2c"></div>
       </section>
 
-      <footer>
+<!--       <footer>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
             <p>Projects by <a href="https://github.com/shivdhwaj">shivdhwaj</a> can be found on <a href="https://github.com/shivdhwaj">GitHub</a></p>
@@ -58,7 +58,7 @@
         </span>
         <p>Generated with <a href="https://pages.github.com">GitHub Pages</a> using Merlot</p>
         <span class="octocat"></span>
-      </footer>
+      </footer> -->
 
     </div>
 
