--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         $('#main_content').headsmart()
       })
     </script> -->
-    <title>Shivdhwaj Pandey by shivdhwaj</title>
+    <title>Technologist - Shivdhwaj Pandey</title>
   </head>
 
   <body>
@@ -29,6 +29,9 @@
           <span class="ribbon-inner">
             <h1>Shivdhwaj Pandey</h1>
             <h2>Technologist</h2>
+            <h3>On Branch : Develop</h3>
+            <h4>Next Release : Soon</h4>
+            <h5>Contact : shivdhwaj@gmail.com</h5>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
